# prolific-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  manifest.json  pyproject.toml  server.json
.github/workflows/: ci.yml  mcpb.yml  release.yml  security.yml
src/prolific_mcp/: __init__.py  __main__.py  client.py  config.py  errors.py  server.py
src/prolific_mcp/tools/: __init__.py  eligibility.py  filter_sets.py  filters.py  projects.py  studies.py  workspaces.py
tests/: conftest.py  test_client.py  test_config.py
tests/tools/: test_eligibility.py  test_filter_sets.py  test_filters.py  test_projects.py  test_studies.py  test_workspaces.py
