[project]
name = "prolific-mcp"
dynamic = ["version"]
description = "MCP server bridging LLM agents to the Prolific public API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Prolific" }]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/prolific-oss/prolific-mcp"
Repository = "https://github.com/prolific-oss/prolific-mcp"
Issues = "https://github.com/prolific-oss/prolific-mcp/issues"

[project.scripts]
prolific-mcp = "prolific_mcp.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/prolific_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/prolific_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
